--- a/views/post.ejs
+++ b/views/post.ejs
@@ -34,40 +34,7 @@
                         <img src="../addmie/img/Addmie.png" alt="image" height="400px" width="auto" style="margin: 5px;">
                     </div>
                    
-                    <span>
-                        <form id='btnform' class="likecommentsharesave">
-        
-                            <%
-                                var likeid='like'+postobj._id,
-                                commentid='comment'+postobj._id,
-                                shareid='share'+postobj._id,
-                                saveid='save'+postobj._id, 
-                                likeidvalue='like'+postobj._id+'value',
-                                commentidvalue='comment'+postobj._id+'value',
-                                shareidvalue='share'+postobj._id+'value',
-                                saveidvalue='save'+postobj._id+'value'; 
-                            %>
-                        <!--      <img src="../addmie/img/">  -->
-                            <button type="button" class="like btn" onclick="like('<%=postobj._id%>')" >       
-                                <i id='<%=likeid%>' class="<%if(postobj.likes.includes(username)){%> fas fa-heart<%}else{%> far fa-heart<%}%>  " ></i>
-                                <div class="likes">
-                                    
-                                    <a href="#likes"><div>likes:</div></a>
-                                    <a href="#likes"><div id="<%=likeidvalue%>"><%=postobj.likes.length%></div></a>
-                                </div>
-                            </button>
-                            <button type="button"   class="comment btn" onclick="comment('<%=postobj._id%>')">
-                                <i id='<%=commentid%>' class="far fa-comment-dots"></i>
-                            </button>
-                    
-                            <button type="button"   class="share btn" onclick="share('<%=postobj._id%>')">
-                                <i id='<%=shareid%>' class="far fa-paper-plane"></i>
-                            </button>
-                            <button type="button"   class="save btn" onclick="save('<%=postobj._id%>')">
-                                <i id='<%=saveid%>' class="far fa-star"></i>
-                            </button>
-                        
-                        </form>
+                    <span>                        
                     
                         
                     </span>
@@ -115,45 +82,18 @@
                             </h3>                                                                                 
                         </div>
                         <span class="flex likecommentsharesave flex_center">
-                            <textarea  placeholder="comment..." style="resize: none; width: 100%;height: 30%;;border: none;outline: none;" rows="5">
-
+                            <textarea id='commenttext'  placeholder="comment..." name='message' type='text'>
+                                
                             </textarea>
-                            <button>
+                            <button onclick="postcomment('<%=username%>','<%=postobj._id%>')">
                                 comment
                             </button>
                         </span>
                     </div>
-                    <div class="flex flex_center">
-                        <span class="flex likecommentsharesave">
-                            <div class="flex flex_column flex_center">
-                                <div class="post_profile_picture">
-                                    <img src="../addmie/img/Addmie.png" alt="image" height="30px" width="30px" style="margin: 5px;">
 
-                                </div>
-                                <h3 class="flex flex_column">
-                                    <a href= <%=link%>>
-                                        <%=postobj.username%>
-                                    </a>
-                                    <button>reply</button>
-                                </h3>                                                                                 
-                            </div>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique enim, nostrum sit quaerat quasi rerum vero quo tempore, totam repellat veniam consequuntur aut? Dolorem quae debitis, recusandae ipsa culpa blanditiis.
-
-                            </p>
-                            
-                            <div>
-                                <button type="button" class="like btn" onclick="like('<%=postobj._id%>')" >       
-                                    <i id='<%=likeid%>' class="<%if(postobj.likes.includes(username)){%> fas fa-heart<%}else{%> far fa-heart<%}%>  " ></i>
-                                    <div class="likes">                    
-                                        <a href="#likes"><div id="<%=likeidvalue%>"><%=postobj.likes.length%></div></a>
-                                    </div>
-                                </button>
-                            </span>
-                        </span>
-                    </div>
-                    
+                    <div class="flex flex_center"><%-include('comment.ejs',{})%></div>
                 </div>
-                <%-include('comment.ejs',{})%>
+                
                 
             </div>
                 
