--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -7,14 +7,16 @@
             </div>
             <h3 class="flex flex_column">
                 <a href= ''>
-                    
+                    <%=comment.postedby%>
                 </a>
                 <button>reply</button>
             </h3>                                                                                 
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique enim, nostrum sit quaerat quasi rerum vero quo tempore, totam repellat veniam consequuntur aut? Dolorem quae debitis, recusandae ipsa culpa blanditiis.
-
-        </p>
+        
+            <p class="">
+                <%=comment.comment%>
+            </p>
+        
         
         <div>
             <button type="button" class="like btn" onclick="" >       
