--- a/views/header.ejs
+++ b/views/header.ejs
@@ -13,48 +13,15 @@
 	
 	<div class="headermenu ">
 			<div class ='flex flex_center'>
-				<div class="logo">
-					<img src="../addmie/img/Addmie.png" height="35px" width="35px">
-				</div>
-				<div class="title"> Addmie</div>
-			
 				<div>
-						<div  >
-							<%if(username){%>
+					<div  >
+						<%if(username){%>
 								<ul class="flex flex_center">
 									<li class="headerbuttons">
-										<a href=<%=homelink%> >
-											<div >
-												<i style="font-size:2.5em;" class="fas fa-home"></i>
-											</div>
-										</a>
-									</li >
-									<li class="headerbuttons">
-										<a href=<%=explorelink%>>
-											<div >
-												<i style="font-size:2.5em;" class="fas fa-eye"></i>
-											</div>
-										</a>
-									</li>
-									<li class="headerbuttons">
-										<a href=<%=profilelink%>>
-											<div >
-												<i style="font-size:2.5em;" class="fas fa-user-alt"></i>
-											</div>
-										</a>
-									</li>
-									<li class="headerbuttons">
-										<a href=<%=messagelink%>>
-											<div >
-												<i style="font-size:2.5em;" class="fas fa-feather-alt"></i>
-											</div>
-										</a>
-									</li>
-									<li class="headerbuttons">
-										<a href=<%=settingslink%>>
-											<div >
-												<i style="font-size:2.5em;" class="fas fa-cog"></i>
-											</div>
+										<a  onclick="history.back()" href="">
+											<div>
+												<i style="font-size:2.5em;" class="fas fa-arrow-left"></i>
+											</div>											
 										</a>
 									</li>
 									<li class="headerbuttons">
@@ -64,6 +31,32 @@
 											</div>
 										</a>
 									</li>
+									<li class="headerbuttons">
+										<a class="flex flex_center" href=<%=homelink%> >
+											<div class="logo">
+												<img src="../addmie/img/Addmie.png" height="35px" width="35px">
+											</div>
+										
+											<div class="title"> Addmie</div>
+										</a>
+									</li>							
+									<li class="headerbuttons">
+										<a href=<%=messagelink%>>
+											<div >
+												<i style="font-size:2.5em;" class="fas fa-feather-alt"></i>
+											</div>
+										</a>
+									</li>							
+									<li class="headerbuttons">
+										<a href=<%=profilelink%>>
+											<div >
+												<i style="font-size:2.5em;" class="fas fa-user-alt"></i>
+											</div>
+										</a>
+									</li>
+									
+									
+									
 								</ul>
 							<%}%>
 						</div>
