--- a/views/post.ejs
+++ b/views/post.ejs
@@ -77,7 +77,7 @@
                             </div>
                             <h3 class="flex flex_column">
                                 <a href= <%=link%>>
-                                    <%=postobj.username%>
+                                    <%=username%>
                                 </a>
                             </h3>                                                                                 
                         </div>
