--- a/views/myprofile.ejs
+++ b/views/myprofile.ejs
@@ -55,6 +55,17 @@
                     <input id='post' type='submit' name='post' value='Post'/>
                 </form>
             </div>
+            <div class="flex flex_row myprofilepostselect">
+                <div>myposts
+                    <i class="fas fa-portrait"></i>
+                </div>
+                <div>newpost
+                    <i class="far fa-plus-square"></i>
+                </div>
+                <div>saved
+                    <i class="far fa-bookmark"></i>
+                </div>
+            </div>
             <div class="post-container">
                 <h1>your posts</h1>
                 <ul>
