--- a/addmie/css/styles.css
+++ b/addmie/css/styles.css
@@ -186,6 +186,23 @@ nav{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
 }
+.profileoptions{
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+}
+.profileoptions button{
+    background-color: #00b9ed;
+    outline: none;
+    border: none;
+    border-radius: 10px;
+    width: 15%;
+    padding: 5px;
+    margin: 5px;
+    font-size: 16px;
+    color: white;
+}
+
 .postform form{
     display: flex;
     height: 100%;
@@ -212,7 +229,20 @@ body > div.grid-container > div.grid-container-right > div.postform > form > inp
     font-weight: bold;
     height: 100%;
 }
-
+.myprofilepostselect{
+    justify-content: space-evenly;
+}
+.myprofilepostselect div{
+    border: 1px solid black;
+    font-size: 3em;
+    width: 100%;
+    text-align: center;
+    text-transform: capitalize;
+    
+}
+.myprofilepostselect div i{
+    font-size: 1em;    
+}
 .post-container{
     text-align: center;
     overflow-y: scroll;
@@ -388,11 +418,10 @@ body > div.grid-container > div.grid-container-right > div.postform > form > inp
     text-decoration: none;
     padding: 5px;
 }
- .settings_container input[type=text],select{
+ .settings_container input[type=text],.settings_container select{
     border-radius: 10px ;
     border: 1px solid black;
     height: 100%;
-    padding: 5px;
     outline: none;
  }
  .settings_container input{
