--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -38,12 +38,10 @@
                 <p id="bio">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt aliquid voluptatibus fugiat non itaque reprehenderit, voluptas vero quam tempore ad consectetur repellat illo hic architecto, voluptatum, dicta vel iure quia. Cumque, impedit, amet laudantium earum at modi quos error quibusdam sunt aut alias velit exercitationem dolorum fugiat odit dolorem accusamus perspiciatis. Enim eos consequatur adipisci dolorem optio placeat quas facilis reprehenderit sequi architecto ipsam, culpa cum, odit aliquid corrupti voluptates obcaecati eius necessitatibus iste doloremque? Laboriosam aliquid minus at alias numquam, temporibus eius eveniet vitae omnis repellat error cumque assumenda corrupti impedit adipisci. Eos at quae, saepe repudiandae atque non?
                 </p>
-                <div class='profileoptions'>
-                    <select>
-                        <option value="">follow</option>
-                        <option value="">block</option>
-                        <option value="">copy link</option>
-                    </select>
+                <div class='profileoptions flex'>                    
+                    <button>
+                        follow
+                    </button>                    
                     <button>
                         message
                     </button>
@@ -55,7 +53,7 @@
             </div>
             <div class="headerbuttons flex flex_center" style="width: 10%;">
                 
-                <button class='doted'>
+                <button class='doted' style="background-color: transparent;outline: none;border: none;">
                     <svg width="4em" height="4em" viewBox="0 0 16 16" class="bi bi-three-dots-vertical" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
                         </svg>
@@ -65,14 +63,8 @@
             
         </div>
         <div class="grid-container-right" >
-            <!-- <div class="postform">
-                
-                
-                <form  method="POST" action=<%=postlink%> >
-                    <input type='text' name='text' placeholder='caption'/>
-                    <input id='post' type='submit' name='post' value='Post'/>
-                </form>
-            </div> -->
+            
+            
             <div class="post-container" style="height: 100%;">
                 <h1>your posts</h1>
                 <ul>
