--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -98,7 +98,16 @@
                     </button>
                 </div>
                 <div>
-                    <a href="#">change password</a>
+                    <a href="#changepassword">change password</a>
+                       
+                </div>
+
+                <div>
+                    <div class="flex hide" id="changepassword">
+                        <form >
+                            <textarea></textarea>
+                        </form>
+                    </div>
                 </div>
                 <div>
                     <a href="/logout">Logout</a>
