--- a/addmie/css/post.css
+++ b/addmie/css/post.css
@@ -8,17 +8,18 @@
     width: 50%;
     height: 100%;
 }
-.postbox_right{
+
+#likes ,#comments,#saves,#shares{
     border-left: 1px solid black;
     margin-left: 5px;
     padding-left: 5px;
 }
-
 #likes ,#comments{
     height: 100%;
     overflow: scroll;
     width: 100%;
 }
+
 #comments {
     flex-direction: column;
     overflow-y: scroll;
